GH-6052 fixing landing page banner visible focus and clean up

--- a/projects/storefrontstyles/scss/themes/calydon/layout/header/_header.scss
+++ b/projects/storefrontstyles/scss/themes/calydon/layout/header/_header.scss
@@ -1,7 +1,10 @@
 %header-calydon {
   .SiteLogo {
-    a {
+    a:focus {
       display: block;
     }
+  }
+  .NavigationBar {
+    overflow: visible;
   }
 }
